@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-21T16:18:50Z",
-  "count_outdated" : 347,
-  "uniques_outdated" : 187,
-  "count" : 376,
+  "timestamp" : "2022-06-22T01:08:21Z",
+  "count_outdated" : 349,
+  "uniques_outdated" : 188,
+  "count" : 377,
   "uniques" : 204,
   "clones" : [
-    {
-      "timestamp": "2022-06-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-08T00:00:00Z",
       "count": 2,
